# weather

./: Cargo.toml  Dockerfile  LICENSE  README.md  clippy.toml  env.example  rustfmt.toml  settings.toml
.github/workflows/: ci.yml
src/: app.rs  commands.rs  config.rs  errors.rs  logger.rs  main.rs  provider_manager.rs  provider_registry.rs
src/weather_providers/: error.rs  mod.rs  openweather.rs  weatherapi.rs
tests/: integration_test.rs
