[package]
name = "weather"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive", "string"] }
config = "0.15.19"
dotenvy = "0.15.7"
openweathermap = "0.2.4"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.8"
tracing = "0.1.43"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.0"
serial_test = "3.2.0"
temp-env = "0.3.6"
wiremock = "0.6.5"
